# libreria-cafe-edd-db

./: README.md  pyproject.toml
src/libreria_cafe_edd_db/: __init__.py
src/libreria_cafe_edd_db/model/: cafe.py  factura.py  venta.py
