[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libreria-cafe-edd-db"
version = "1.0.5"
description = "Librería para manejar una base de datos relacional SQLite entre todos los módulos del proyecto final de Estructuras de Datos de manera consistente."
authors = [{ name = "justcarlux" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["sqlalchemy>=2.0.0"]

[project.urls]
Homepage = "https://github.com/justcarlux/libreria-cafe-edd-db"
Repository = "https://github.com/justcarlux/libreria-cafe-edd-db"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
libreria_cafe_edd_db = ["py.typed"]
